unpackaged/main/default/objects/QuoteLineItem/fields/Months_in_Contract__c.field-meta.xml
<CustomField>
    <fullName>Months_in_Contract__c</fullName>
    <formula>Quote.Months_in_Contract__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months in Contract</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>