unpackaged/main/default/objects/QuoteLineItem/fields/Quote_Line_ACV__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_ACV__c</fullName>
    <description>Total Price / Number of Years in Contract</description>
    <formula>(UnitPrice * Quantity)-(UnitPrice * Quantity * Discount)/ (Months_in_Contract__c /12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Price / Number of Years in Contract</inlineHelpText>
    <label>Quote Line ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>