unpackaged/main/default/objects/QuoteLineItem/validationRules/Cannot_Use_Overages.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Use_Overages</fullName>
    <active>false</active>
    <description>Salesforce users cannot utilize the overages product in salesforce. This is only for Intacct to be able to bill.</description>
    <errorConditionFormula>Product2.ProductCode == 'OVERAGE'</errorConditionFormula>
    <errorDisplayField>Product2Id</errorDisplayField>
    <errorMessage>The Product 'Overages' is not eligible for quoting. Please reach out to Deal Ops or Finance for more information and assistance.</errorMessage>
</ValidationRule>